--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ----------------------------------------------------------------------------- 	
-| AdminServer  Copyright (C) 2014  GoldraK & Interhack                      |
+| JarJar Copyright (C) 2014  GoldraK & Interhack                      	    |
 | This program comes with ABSOLUTELY NO WARRANTY;			    |
 | This is free software, and you are welcome to redistribute it             |
 | under certain conditions;  				                    |
